--- a/AdventureRipper/MainWindow.xaml
+++ b/AdventureRipper/MainWindow.xaml
@@ -20,7 +20,7 @@
             <Separator/>
             <TextBlock Name="fileTableSizeTextBlock">Field 4</TextBlock>
         </StatusBar>
-        <TreeView Name="fileTreeView" DockPanel.Dock="Left">
+        <TreeView Name="fileTreeView" DockPanel.Dock="Left" SelectedItemChanged="fileTreeView_SelectedItemChanged">
             <TreeViewItem Header="North America">
                 <TreeViewItem Header="USA"></TreeViewItem>
                 <TreeViewItem Header="Canada"></TreeViewItem>
@@ -35,7 +35,7 @@
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <Image x:Name="imgFoto" Width="320" Height="200" Margin="5"></Image>
             <Button x:Name="btnFoto" Width="100" Height="25"
-                    Content="Agregar Foto" Margin="5" />
+                    Content="Agregar Foto" Margin="5" Click="btnFoto_Click" />
         </StackPanel>
     </DockPanel>
 </Window>
