--- a/AdventureRipper/MainWindow.xaml
+++ b/AdventureRipper/MainWindow.xaml
@@ -1,11 +1,12 @@
 ﻿<Window x:Class="AdventureRipper.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="410" Width="525">
+        Title="MainWindow" Height="600" Width="800">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
                 <MenuItem Header="_Open" Click="openMenu"/>
+                <MenuItem Header="O_pen Directory" Click="MenuItem_Click" />
                 <MenuItem Header="_Close"/>
                 <MenuItem Header="_Save"/>
             </MenuItem>
@@ -22,7 +23,7 @@
             <Separator/>
             <TextBlock Name="offsetTextBlock">Offset</TextBlock>
         </StatusBar>
-        <TreeView Name="fileTreeView" DockPanel.Dock="Left" SelectedItemChanged="fileTreeView_SelectedItemChanged">
+        <TreeView Name="fileTreeView" DockPanel.Dock="Left" SelectedItemChanged="FileTreeViewSelectedItemChanged" Width="173">
             <TreeViewItem Header="North America">
                 <TreeViewItem Header="USA"></TreeViewItem>
                 <TreeViewItem Header="Canada"></TreeViewItem>
@@ -34,10 +35,14 @@
                 <TreeViewItem Header="Uruguay"></TreeViewItem>
             </TreeViewItem>
         </TreeView>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Image x:Name="imgFoto" Width="320" Height="200" Margin="5"></Image>
-            <Button x:Name="btnFoto" Width="100" Height="25"
-                    Content="Agregar Foto" Margin="5" Click="btnFoto_Click" />
+        <StackPanel>
+            <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5">
+                <Image x:Name="imgFoto" Height="240" Width="320"  Margin="5"></Image>
+                <Button x:Name="btnZoom" Width="100" Height="25" Content="Agregar Foto" Margin="5" Click="btnZoom_Click" />
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top">
+                <Button x:Name="btnExtract" Width="100" Height="25" Content="Extraer archivo" Margin="5" Click="btnFoto_Click" />
+            </StackPanel>
         </StackPanel>
     </DockPanel>
 </Window>
